--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language: python
 python: 3.7.2
 install:
   - pip install -r requirements_dev.txt
-  - pip install -e
+  - pip install -e .
 script:
   - pytest
